--- a/1.20wps.md
+++ b/1.20wps.md
@@ -11,7 +11,7 @@
 ### 工具：在线php工具
 ### 思路：
 - 打开www文件查看代码，题目要求找到数据库的连接密码，那么打开database这个文件，打开后可以看到数据库的连接信息
-![](./查看数据库.png)
+![](./images/查看数据库.png)
 - 其中密码部分调用了一个加密函数my-encrypt，接着去打开这个php文件，由于个人不是很懂php，所以去网络查看参考资料，使用在线的php工具可以添加输出语句echo my_encrypt()来使得结果输出
 - 得到flag为KBLT123；
 ### 思考：
